--- a/casa/who-we-are.html
+++ b/casa/who-we-are.html
@@ -64,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                     <!-- content -->
                     <p>Mezcales Casa Armando represents a dream carried out over 5 generations. Forged with family values, a rich cultural heritage and a great love for Oaxaca and Mexico.</p>
                     <p>&nbsp;</p>
-                    <p>MCA is the leading mezcal company in both the domestic &amp; duty-free markets in Mexico, with a growing presence in Central America, Europe, Australia, Asia.</p>
+                    <p>MCA is the leading mezcal company in both the domestic &amp; duty-free markets in Mexico, with a growing presence in Central America, Europe, Australia, and Asia.</p>
                 </div>
             </div>
             <div class="clearfix grpelem" id="pu3998-4">
