--- a/casa/quienes-somos.html
+++ b/casa/quienes-somos.html
@@ -86,7 +86,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                     <!-- content -->
                     <p>Mezcales Casa Armando representa la continuidad de un sueño de 5 generaciones, creado con valores familiares, una rica herencia cultural y gran amor por Oaxaca y por México.</p>
                     <p>&nbsp;</p>
-                    <p>Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, Asia.</p>
+                    <p>Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, y Asia.</p>
                 </div>
             </div>
             <div class="verticalspacer" data-offset-top="618" data-content-above-spacer="618" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
