--- a/casa/responsabilidad-social.html
+++ b/casa/responsabilidad-social.html
@@ -81,9 +81,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                         </div>
                         <div class="clearfix colelem" id="u2423-13">
                             <!-- content -->
-                            <p>· Con nuestra Fundación Don Antonio Rivera Venegas que se enfoca en beneficiar y promover a artistas y artesanos locales.</p>
+                            <p>Con nuestra Fundación Agave y Nosotros que se enfoca en beneficiar y promover a artistas y artesanos locales.</p>
                             <p>&nbsp;</p>
-                            <p>· Con la Fundación Don Antonio Rivera Venegas, que ofrecen servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p>
+                            <p>Con la Fundación Don Antonio Rivera Venegas, que ofrece servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p>
                             <p>&nbsp;</p>
                         </div>
                     </div>
