--- a/casa/social-responsability.html
+++ b/casa/social-responsability.html
@@ -45,26 +45,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                         <!-- simple frame -->
                     </div>
                 </div>
-                <div id="u3993-wrapper">
-                    <a class="nonblock nontext clip_frame" id="u3993" href="casa-armando-guillermo-prieto-english.html"><!-- svg --><img class="svg svg_mar" id="u8400" src="images/logo_casa_armando.svg?crc=332153947" onload="this.style.height=(this.offsetWidth*73/130.6015625)+'px'" alt="" data-mu-svgfallback="images/logo_casa_armando_poster_.png?crc=4131748362" data-heightwidthratio="0.5572519083969466" data-image-width="131" data-image-height="73"/></a>
+                <div id="u3993-wrapper"><a class="nonblock nontext clip_frame" id="u3993" href="casa-armando-guillermo-prieto-english.html"><!-- svg --><img class="svg svg_mar" id="u8400" src="images/logo_casa_armando.svg?crc=332153947" onload="this.style.height=(this.offsetWidth*73/130.6015625)+'px'" alt="" data-mu-svgfallback="images/logo_casa_armando_poster_.png?crc=4131748362" data-heightwidthratio="0.5572519083969466" data-image-width="131" data-image-height="73"/></a>
                 </div>
-                <div id="u3995-4-wrapper">
-                    <a class="nonblock nontext clearfix" id="u3995-4" href="who-we-are.html"><!-- content --><p>WHO WE ARE?</p></a>
+                <div id="u3995-4-wrapper"><a class="nonblock nontext clearfix" id="u3995-4" href="who-we-are.html"><!-- content --><p>WHO WE ARE?</p></a>
                 </div>
-                <div id="u3999-4-wrapper">
-                    <a class="nonblock nontext clearfix" id="u3999-4" href="our-brands.html"><!-- content --><p>OUR BRANDS</p></a>
+                <div id="u3999-4-wrapper"><a class="nonblock nontext clearfix" id="u3999-4" href="our-brands.html"><!-- content --><p>OUR BRANDS</p></a>
                 </div>
-                <div id="u3998-4-wrapper">
-                    <a class="nonblock nontext MuseLinkActive clearfix" id="u3998-4" href="social-responsability.html"><!-- content --><p>Social Responsability</p></a>
+                <div id="u3998-4-wrapper"><a class="nonblock nontext MuseLinkActive clearfix" id="u3998-4" href="social-responsability.html"><!-- content --><p>Social Responsability</p></a>
                 </div>
-                <div id="u3996-4-wrapper" style="margin-left: 326px;">
-                    <a class="nonblock nontext clearfix" id="u3996-4" href="contact.html"><!-- content --><p>CONTACT</p></a>
+                <div id="u3996-4-wrapper" style="margin-left: 326px;"><a class="nonblock nontext clearfix" id="u3996-4" href="contact.html"><!-- content --><p>CONTACT</p></a>
                 </div>
-                <div id="u6403-4-wrapper">
-                    <a class="nonblock nontext clearfix" id="u6403-4" href="index.html"><!-- content --><p>ESP</p></a>
+                <div id="u6403-4-wrapper"><a class="nonblock nontext clearfix" id="u6403-4" href="index.html"><!-- content --><p>ESP</p></a>
                 </div>
-                <div id="u6404-4-wrapper">
-                    <a class="nonblock nontext clearfix" id="u6404-4" href="casa-armando-guillermo-prieto-english.html"><!-- content --><p>ENG</p></a>
+                <div id="u6404-4-wrapper"><a class="nonblock nontext clearfix" id="u6404-4" href="casa-armando-guillermo-prieto-english.html"><!-- content --><p>ENG</p></a>
                 </div>
             </div>
             <div class="clearfix grpelem" id="ppu5203">
@@ -72,14 +65,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                 <div class="clearfix colelem" id="pu5203">
                     <!-- group -->
                     <div class="pointer_cursor clearfix grpelem" id="u5203">
-                        <!-- group -->
-                        <a class="block" href="don-antonio-rivera-venegas-foundation.html"><!-- Block link tag --></a>
-                        <a class="nonblock nontext clearfix grpelem" id="u5205-4" href="don-antonio-rivera-venegas-foundation.html"><!-- content --><p>Don Antonio Rivera Venegas Foundation</p></a>
+                        <!-- group --><a class="block" href="don-antonio-rivera-venegas-foundation.html"><!-- Block link tag --></a><a class="nonblock nontext clearfix grpelem" id="u5205-4" href="don-antonio-rivera-venegas-foundation.html"><!-- content --><p>Don Antonio Rivera Venegas Foundation</p></a>
                     </div>
                     <div class="pointer_cursor clearfix grpelem" id="u5204">
-                        <!-- group -->
-                        <a class="block" href="the-el-agave-y-nosotros-fundation.html"><!-- Block link tag --></a>
-                        <a class="nonblock nontext clearfix grpelem" id="u5206-4" href="the-el-agave-y-nosotros-fundation.html"><!-- content --><p>El Agave y Nosotros Foundation</p></a>
+                        <!-- group --><a class="block" href="the-el-agave-y-nosotros-fundation.html"><!-- Block link tag --></a><a class="nonblock nontext clearfix grpelem" id="u5206-4" href="the-el-agave-y-nosotros-fundation.html"><!-- content --><p>El Agave y Nosotros Foundation</p></a>
                     </div>
                 </div>
                 <div class="clearfix colelem" id="ppu4985-4">
@@ -93,27 +82,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                         <div class="clearfix colelem" id="u4975-10">
                             <!-- content -->
                             <p>&nbsp;</p>
-                            <p>· With our Foundation "Don Antonio Rivera Venegas", which focuses on benefiting and promoting local artists and artisans.</p>
+                            <p>With our Foundation "Agave y Nosotros", which focuses on benefiting and promoting local artists and artisans.</p>
                             <p>&nbsp;</p>
-                            <p>· With the Don Antonio Rivera Venegas Foundation, which offers basic services such as medical care; assistance in the face of natural disasters; training in agronomy; community dining, as well as the Municipal Boxing Training Center.</p>
+                            <p>With the Don Antonio Rivera Venegas Foundation, which offers basic services such as medical care; assistance in the face of natural disasters; training in agronomy; community dining, as well as the Municipal Boxing Training Center.</p>
                         </div>
                     </div>
                     <div class="pointer_cursor museBGSize clearfix grpelem" id="u4984">
-                        <!-- group -->
-                        <a class="block" href="antonio-rivera.html"><!-- Block link tag --></a>
+                        <!-- group --><a class="block" href="antonio-rivera.html"><!-- Block link tag --></a>
                         <div class="pointer_cursor rgba-background clearfix grpelem" id="u4979">
-                            <!-- group -->
-                            <a class="block" href="don-antonio-rivera-venegas-foundation.html"><!-- Block link tag --></a>
-                            <a class="nonblock nontext clip_frame grpelem" id="u4971" href="don-antonio-rivera-venegas-foundation.html"><!-- image --><img class="block" id="u4971_img" src="images/logo_don_antonio.png?crc=4088897082" alt="" data-heightwidthratio="0.9370629370629371" data-image-width="143" data-image-height="134"/></a>
+                            <!-- group --><a class="block" href="don-antonio-rivera-venegas-foundation.html"><!-- Block link tag --></a><a class="nonblock nontext clip_frame grpelem" id="u4971" href="don-antonio-rivera-venegas-foundation.html"><!-- image --><img class="block" id="u4971_img" src="images/logo_don_antonio.png?crc=4088897082" alt="" data-heightwidthratio="0.9370629370629371" data-image-width="143" data-image-height="134"/></a>
                         </div>
                     </div>
                     <div class="pointer_cursor clearfix grpelem" id="u4974">
-                        <!-- group -->
-                        <a class="block" href="fundacion-el-agave.html"><!-- Block link tag --></a>
+                        <!-- group --><a class="block" href="fundacion-el-agave.html"><!-- Block link tag --></a>
                         <div class="pointer_cursor rgba-background clearfix grpelem" id="u4981">
-                            <!-- group -->
-                            <a class="block" href="the-el-agave-y-nosotros-fundation.html"><!-- Block link tag --></a>
-                            <a class="nonblock nontext clip_frame grpelem" id="u4976" href="the-el-agave-y-nosotros-fundation.html"><!-- image --><img class="block" id="u4976_img" src="images/logo_fundacion_agave.png?crc=70799656" alt="" data-heightwidthratio="0.32057416267942584" data-image-width="209" data-image-height="67"/></a>
+                            <!-- group --><a class="block" href="the-el-agave-y-nosotros-fundation.html"><!-- Block link tag --></a><a class="nonblock nontext clip_frame grpelem" id="u4976" href="the-el-agave-y-nosotros-fundation.html"><!-- image --><img class="block" id="u4976_img" src="images/logo_fundacion_agave.png?crc=70799656" alt="" data-heightwidthratio="0.32057416267942584" data-image-width="209" data-image-height="67"/></a>
                         </div>
                     </div>
                 </div>
