--- a/casa/contacto.html
+++ b/casa/contacto.html
@@ -63,7 +63,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                 <div id="u6400-4-wrapper">
                     <a class="nonblock nontext clearfix" id="u6400-4" href="casa-armando-guillermo-prieto-english.html"><!-- content --><p>ENG</p></a>
                 </div>
-                <div id="u131-4-wrapper">
+                <div id="u131-4-wrapper" style="margin-left: 326px;">
                     <a class="nonblock nontext MuseLinkActive clearfix" id="u131-4" href="contacto.html"><!-- content --><p>CONTACTO</p></a>
                 </div>
             </div>
