--- a/casa/nuestras-marcas.html
+++ b/casa/nuestras-marcas.html
@@ -71,12 +71,41 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                     <p id="u2789-6">&nbsp;</p>
                     <p id="u2789-8">Cubren los perfiles organolépticos para todo tipo de consumidores de mezcal: iniciadores, aficionados y expertos.</p>
                     <p id="u2789-6">&nbsp;</p>
-                    <p id="u2789-8">Nuestra más reciente marca, Metchi®, es una sal de gusano artesanal premium, ideal para acompañar el mezcal, ya sea bebido derecho con rodajas de naranja o en mixología.</p>
+                    <p id="u2789-8">Nuestra más reciente marca, Metchi®, es una sal de gusano artesanal premium, ideal para acompañar el mezcal, ya sea derecho con rodajas de naranja o en mixología.</p>
                 </div>
                 <div class="clearfix colelem" id="pu5649">
-                    <!-- group --><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5649" href="nuestras-marcas.html#recuerdo"><!-- image --><img class="block" id="u5649_img" src="images/logorecuerdo.png?crc=421205962" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5659" href="nuestras-marcas.html#senorio"><!-- image --><img class="block" id="u5659_img" src="images/logosenorio.png?crc=476137220" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5666" href="nuestras-marcas.html#zignum"><!-- image --><img class="block" id="u5666_img" src="images/logozignum.png?crc=219886357" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5666" href="nuestras-marcas.html#metchi"><!-- image --><img class="block" id="u5666_img" src="images/logometchi.png?crc=219886357" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126" style="margin-top: 54px;"/></a>
+                    <!-- group --><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5649" href="nuestras-marcas.html#recuerdo"><!-- image --><img class="block" id="u5649_img" src="images/logorecuerdo.png?crc=421205962" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5666" href="nuestras-marcas.html#zignum"><!-- image --><img class="block" id="u5666_img" src="images/logozignum.png?crc=219886357" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a>
+                    <a class="nonblock nontext anim_swing clip_frame grpelem" id="u5659" href="nuestras-marcas.html#senorio"><!-- image --><img class="block" id="u5659_img" src="images/logosenorio.png?crc=476137220" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126"/></a><a class="nonblock nontext anim_swing clip_frame grpelem" id="u5666" href="nuestras-marcas.html#metchi"><!-- image --><img class="block" id="u5666_img" src="images/logometchi.png?crc=219886357" alt="" data-heightwidthratio="0.6774193548387096" data-image-width="186" data-image-height="126" style="margin-top: 54px;"/></a>
                 </div>
                 <a class="anchor_item colelem" id="zignum" data-sizePolicy="fixed" data-pintopage="page_fluidx"></a>
+                <div class="browser_width colelem" id="u3219-bw">
+                    <div class="museBGSize" id="u3219">
+                        <!-- group -->
+                        <div class="clearfix" id="u3219_align_to_page"><a class="anchor_item grpelem" id="recuerdo" data-sizePolicy="fixed" data-pintopage="page_fluidx"></a>
+                            <div class="clearfix grpelem" id="pu3317">
+                                <!-- column -->
+                                <div class="clip_frame colelem" id="u3317">
+                                    <!-- image -->
+                                    <img class="block" id="u3317_img" src="images/logo_recuerdo_mezcal.png?crc=71960386" alt="" data-heightwidthratio="1.0903954802259888" data-image-width="177" data-image-height="193"/>
+                                </div>
+                                <div class="clearfix colelem" id="u2883-13">
+                                    <!-- content -->
+                                    <p id="u2883-2">Directamente de la capital ancestral del mezcal, EL RECUERDO MEZCAL es un producto memorable de nuestra tradición y nuestra cultura, en cada sentido de la palabra.</p>
+                                    <p id="u2883-3">&nbsp;</p>
+                                    <p id="u2883-8">EL RECUERDO MEZCAL está disponible con un gusano para aquellos que prefieren la textura sedosa que el gusano de agave le da al líquido y la novedad de compartirlo con amigos; así como sin el gusano, para aquellos que buscan notas ahumadas con una complejidad diferente.<br/><br/>Horneado con madera certificada sobre rocas de río, todas las técnicas tradicionales son respetadas y preservan el medio ambiente.</p>
+                                    <p id="u2883-11"><br/>EL RECUERDO MEZCAL es el mezcal número uno vendido en Duty Free; es seleccionado por turistas internacionales que buscan regalos auténticos de México.</p>
+                                </div><a class="nonblock nontext clearfix colelem" id="u3697-4" href="http://recuerdomezcal.com/" target="_blank"><!-- content --><p><span id="u3697">Ir al sitio</span></p></a>
+                            </div>
+                            <div class="clearfix grpelem" id="pu3230">
+                                <!-- column -->
+                                <div class="clip_frame colelem" id="u3230">
+                                    <!-- image -->
+                                    <img class="block" id="u3230_img" src="images/botellas_recuerdo.png?crc=69541219" alt="" data-heightwidthratio="1.8956228956228955" data-image-width="297" data-image-height="563"/>
+                                </div><a class="nonblock nontext anim_swing clip_frame colelem" id="u3703" href="nuestras-marcas.html#topesc"><!-- image --><img class="block" id="u3703_img" src="images/flecha.png?crc=4040756504" alt="" data-heightwidthratio="1" data-image-width="34" data-image-height="34"/></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="browser_width colelem" id="u5435-bw">
                     <div id="u5435">
                         <!-- group -->
@@ -107,34 +136,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                         </div>
                     </div>
                 </div>
-                <div class="browser_width colelem" id="u3219-bw">
-                    <div class="museBGSize" id="u3219">
-                        <!-- group -->
-                        <div class="clearfix" id="u3219_align_to_page"><a class="anchor_item grpelem" id="recuerdo" data-sizePolicy="fixed" data-pintopage="page_fluidx"></a>
-                            <div class="clearfix grpelem" id="pu3317">
-                                <!-- column -->
-                                <div class="clip_frame colelem" id="u3317">
-                                    <!-- image -->
-                                    <img class="block" id="u3317_img" src="images/logo_recuerdo_mezcal.png?crc=71960386" alt="" data-heightwidthratio="1.0903954802259888" data-image-width="177" data-image-height="193"/>
-                                </div>
-                                <div class="clearfix colelem" id="u2883-13">
-                                    <!-- content -->
-                                    <p id="u2883-2">Directamente de la capital ancestral del mezcal, EL RECUERDO MEZCAL es un producto memorable de nuestra tradición y nuestra cultura, en cada sentido de la palabra.</p>
-                                    <p id="u2883-3">&nbsp;</p>
-                                    <p id="u2883-8">EL RECUERDO MEZCAL está disponible con un gusano para aquellos que prefieren la textura sedosa que el gusano de agave le da al líquido y la novedad de compartirlo con amigos; así como sin el gusano, para aquellos que buscan notas ahumadas con una complejidad diferente.<br/><br/>Horneado con madera certificada sobre rocas de río, todas las técnicas tradicionales son respetadas y preservan el medio ambiente.</p>
-                                    <p id="u2883-11"><br/>EL RECUERDO MEZCAL es el mezcal número uno vendido en Duty Free; es seleccionado por turistas internacionales que buscan regalos auténticos de México.</p>
-                                </div><a class="nonblock nontext clearfix colelem" id="u3697-4" href="http://recuerdomezcal.com/" target="_blank"><!-- content --><p><span id="u3697">Ir al sitio</span></p></a>
-                            </div>
-                            <div class="clearfix grpelem" id="pu3230">
-                                <!-- column -->
-                                <div class="clip_frame colelem" id="u3230">
-                                    <!-- image -->
-                                    <img class="block" id="u3230_img" src="images/botellas_recuerdo.png?crc=69541219" alt="" data-heightwidthratio="1.8956228956228955" data-image-width="297" data-image-height="563"/>
-                                </div><a class="nonblock nontext anim_swing clip_frame colelem" id="u3703" href="nuestras-marcas.html#topesc"><!-- image --><img class="block" id="u3703_img" src="images/flecha.png?crc=4040756504" alt="" data-heightwidthratio="1" data-image-width="34" data-image-height="34"/></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="browser_width colelem" id="u2899-bw">
                     <div class="gradient" id="u2899"><a class="anchor_item grpelem" id="senorio" data-sizePolicy="fixed" data-pintopage="page_fluidx"></a>
                         <!-- group -->
@@ -147,7 +148,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                                 </div>
                                 <div class="clearfix colelem" id="u2912-13">
                                     <!-- content -->
-                                    <p id="u2912-2">SEÑORÍO Mezcal es la ARMONIA PERFECTA DE DOS DESTILACIONES</p>
+                                    <p id="u2912-2">SEÑORÍO MEZCAL es la Armonia Perfecta de dos destilaciones</p>
                                     <p id="u2912-3">&nbsp;</p>
                                     <p id="u2912-5">SEÑORÍO MEZCAL es un Mezcal de Ahumado Suave originario de Oaxaca, que adquiere esta particularidad gracias a la PERFECTA ARMONÍA DE DOS DESTILACIONES de distintas intensidades y perfiles de sabor-aroma.</p>
                                     <p id="u2912-6">&nbsp;</p>
