--- a/casa/nuestras-marcas.html
+++ b/casa/nuestras-marcas.html
@@ -98,10 +98,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                                 </div>
                                 <div class="clearfix colelem" id="u2883-13">
                                     <!-- content -->
-                                    <p id="u2883-2">Directamente de la capital ancestral del mezcal, EL RECUERDO MEZCAL es un producto memorable de nuestra tradición y nuestra cultura, en cada sentido de la palabra.</p>
+                                    <p id="u2883-2">Directamente de la capital ancestral del mezcal, EL RECUERDO MEZCAL® es un producto memorable de nuestra tradición y nuestra cultura, en cada sentido de la palabra.</p>
                                     <p id="u2883-3">&nbsp;</p>
-                                    <p id="u2883-8">EL RECUERDO MEZCAL se ofrece con un gusano de agave, para quienes aprecian la textura sedosa que este aporta al líquido y disfrutan de la novedad de compartirlo con amigos. También está disponible sin gusano para aquellos que buscan notas ahumadas con una complejidad distinta.<br/><br/>Horneado sobre piedras de río con madera certificada, se respetan todas las técnicas tradicionales garantizando la preservación del medio ambiente.</p>
-                                    <p id="u2883-11"><br/>EL RECUERDO MEZCAL es el mezcal más vendido en las tiendas Duty Free México; es elegido por turistas internacionales en busca de regalos auténticos de México.</p>
+                                    <p id="u2883-8">EL RECUERDO MEZCAL® se ofrece con un gusano de agave, para quienes aprecian la textura sedosa que este aporta al líquido y disfrutan de la novedad de compartirlo con amigos. También está disponible sin gusano para aquellos que buscan notas ahumadas con una complejidad distinta.<br/><br/>Horneado sobre piedras de río con madera certificada, se respetan todas las técnicas tradicionales garantizando la preservación del medio ambiente.</p>
+                                    <p id="u2883-11"><br/>EL RECUERDO MEZCAL® es el mezcal más vendido en las tiendas Duty Free México; es elegido por turistas internacionales en busca de regalos auténticos de México.</p>
                                 </div>
                                 <a class="nonblock nontext clearfix colelem" id="u3697-4" href="http://recuerdomezcal.com/" target="_blank"><!-- content --><p><span id="u3697">Ir al sitio</span></p></a>
                             </div>
@@ -130,12 +130,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                             </div>
                             <div class="clearfix grpelem" id="u2798-15">
                                 <!-- content -->
-                                <p id="u2798-2">ZIGNUM, significa “punta de lanza”, es reconocido como un Mezcal excepcionalmente</p>
-                                <p id="u2798-4">suave y fino.</p>
+                                <p id="u2798-2">ZIGNUM ®, significa “punta de lanza”, es reconocido como un Mezcal excepcionalmente suave y fino.</p>
                                 <p id="u2798-5">&nbsp;</p>
                                 <p id="u2798-7">El Maestro Mezcalero y su gente, lo elaboran con pasión y compromiso con el medio ambiente; del campo a la barrica y de la barrica a la botella. Las piñas del agave son cosechadas en su plenitud de maduración, para otorgar al destilado final un sabor auténtico.</p>
                                 <p id="u2798-8">&nbsp;</p>
-                                <p id="u2798-10">ZIGNUM Reposado, Añejo y Cristalino son después envejecidos en barricas de roble, mismas que le dan mayor complejidad y carácter.</p>
+                                <p id="u2798-10">ZIGNUM ® Reposado, Añejo y Cristalino son después envejecidos en barricas de roble, mismas que le dan mayor complejidad y carácter.</p>
                                 <p id="u2798-11">&nbsp;</p>
                                 <p id="u2798-13">EL MEZCAL MÁS PREMIADO DEL MUNDO, complacerá a los clientes más exigentes, así como a aquellos que se empiezan a aventurar en el mundo del Mezcal.</p>
                             </div>
@@ -162,11 +161,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                                 </div>
                                 <div class="clearfix colelem" id="u2912-13">
                                     <!-- content -->
-                                    <p id="u2912-2">SEÑORÍO MEZCAL es la Armonia Perfecta de dos destilaciones</p>
+                                    <p id="u2912-2">SEÑORÍO MEZCAL® es la Armonia Perfecta de dos destilaciones</p>
                                     <p id="u2912-3">&nbsp;</p>
-                                    <p id="u2912-5">SEÑORÍO MEZCAL es un Mezcal de Ahumado Suave originario de Oaxaca, que adquiere esta particularidad gracias a la PERFECTA ARMONÍA DE DOS DESTILACIONES de distintas intensidades y perfiles de sabor-aroma.</p>
+                                    <p id="u2912-5">SEÑORÍO MEZCAL® es un Mezcal de Ahumado Suave originario de Oaxaca, que adquiere esta particularidad gracias a la PERFECTA ARMONÍA DE DOS DESTILACIONES de distintas intensidades y perfiles de sabor-aroma.</p>
                                     <p id="u2912-6">&nbsp;</p>
-                                    <p id="u2912-8">EL BALANCE PERFECTO ENTRE LAS NOTAS SUAVES DE HUMO Y EL SABOR AUTÉNTICO DEL AGAVE ESPADÍN. SEÑORÍO MEZCAL Reposado y Añejo son madurados en barricas de roble blanco americano, que les otorgan notas más intensas y complejas.</p>
+                                    <p id="u2912-8">EL BALANCE PERFECTO ENTRE LAS NOTAS SUAVES DE HUMO Y EL SABOR AUTÉNTICO DEL AGAVE ESPADÍN. SEÑORÍO MEZCAL® Reposado y Añejo son madurados en barricas de roble blanco americano, que les otorgan notas más intensas y complejas.</p>
                                     <p id="u2912-9">&nbsp;</p>
                                     <p id="u2912-11">Celebramos e invitamos al descubrimiento, en Armonía Perfecta, del valor de los pequeños detalles y a aprender a disfrutar del “todo” de las cosas.</p>
                                 </div>
@@ -196,13 +195,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
                                 </div>
                                 <div class="clearfix colelem" id="u29120-13">
                                     <!-- content -->
-                                    <p id="u2912-2" style="color: #ffffff;">Metchi da balance y complementa el ritual mezcalero</p>
+                                    <p id="u2912-2" style="color: #ffffff;">METCHI® da balance y complementa el ritual mezcalero</p>
                                     <p id="u2912-3">&nbsp;</p>
-                                    <p id="u2912-5" style="color: #ffffff;">Respetando la tradición que nuestros ancestros nos enseñaron. Desde la recolección del gusano, que se hace solo una vez al año en temporada de lluvias, buscando en cada maguey los mejores gusanos.</p>
+                                    <p id="u2912-5" style="color: #ffffff;">Metchi®  es  la  abreviaciónpara  (metchikuil),  una  forma  tradicional   de   nombrar   al   gusano     rojo     del     maguey     en        zapoteco        (lenguaje        autóctono     de     la     región     oaxaqueña).</p>
                                     <p id="u2912-6">&nbsp;</p>
-                                    <p id="u2912-8" style="color: #ffffff;">Metchi es la abreviación para “metchikuil”, una forma tradicional de nombrar al gusano rojo del maguey en zapoteco (lenguaje autóctono de la región oaxaqueña).</p>
+                                    <p id="u2912-8" style="color: #ffffff;"> Nuestra  sal  de  gusano,  es  una  mezcla  ahumada  y  picosita  con  agradable  presencia  de  sabores de la tierra.</p>
                                     <p id="u2912-9">&nbsp;</p>
-                                    <p id="u2912-11" style="color: #ffffff;">Nuestra mezcla es ahumada y picosita con agradable presencia de sabores de la tierra.</p>
+                                    <p id="u2912-11" style="color: #ffffff;">Metchi®   da   balance   y   complementa        el        ritual mezcalero,    es    ideal    para    escarchar       sus       cócteles       y    un    delicioso    sazonador    para   platillos   mexicanos   e   internacionales.</p>
                                 </div>
                                 <a class="nonblock nontext clearfix colelem" id="u37000-4" href="https://www.salmetchi.com/" target="_blank"><!-- content --><p style="color: #ffffff;"><span id="u37000">Ir al sitio</span></p></a>
                             </div>
