--- a/_pgbackup/casa2/about_1696440590.html
+++ b/_pgbackup/casa2/about_1696440590.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%25252520Armando%25252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css"> 
@@ -39,7 +40,7 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Idiomas:</span><span class="icons"><a>SPA</a> <a>ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Languages:</span><span class="icons"><a href="index.html">SPA</a> <a class="current-menu-item" href="Ingles.html">ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -61,15 +62,15 @@
                                 <!-- /.mobile-button -->                                 
                                 <nav id="main-nav" class="main-nav"> 
                                     <ul id="menu-primary-menu" class="menu"> 
-                                        <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="Ingles.html">Home</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="page-about.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a class="translatable mayus" href="about.html">About Us</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="brands.html">Our Brands</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="responsibility.html">Social Responsibility</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="page-contact.html">CONTACTO</a> 
+                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="contact.html">Contact</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -90,9 +91,12 @@
                             <div id="inner-content" class="inner-content-wrap"> 
                                 <div class="page-content"> 
                                     <div class="newclass2">
-                                        <p> Mezcales Casa Armando representa la continuidad de un sueño de 5 generaciones, creado con valores familiares, una rica herencia cultural y gran amor por Oaxaca y por México.</p>
-                                        <p>Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, y Asia.<div class="button"><a href="#" class="themesflat-button bg-white">CALIDAD CONSISTENTE, PRODUCCIÓN SOSTENIBLE</a><a href="#" class="themesflat-button bg-white">PROGRAMA DE SUSTENTABILIDAD MÉTODO VERDE</a>
-                                            </div></p> 
+                                        <p>Mezcales Casa Armando represents the continuity of a dream of 5 generations, created with family values, a rich cultural heritage, and great love for Oaxaca and Mexico.</p>
+                                        <p>It is the leading mezcal company in Mexico, both in the domestic market and in Duty Free Mexico, with an increasing presence in Central America, Europe, Australia, and Asia. </p>
+                                        <div class="button">
+                                            <a href="#" class="themesflat-button bg-white">CONSISTENT QUALITY, SUSTAINABLE PRODUCTION</a>
+                                            <a href="#" class="themesflat-button bg-white">GREEN METHOD SUSTAINABILITY PROGRAM</a>
+                                        </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
                                     <!-- SLIDER -->                                     
@@ -131,22 +135,22 @@
                 <footer class="bottom" id="bottom" class="clearfix has-spacer"> 
                     <div id="bottom-bar-inner" class="container"> 
                         <div class="bottom-bar-inner-wrap"> 
+                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright"><span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
+                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>AVOID EXCESS&nbsp;&nbsp;&nbsp;ABUSE OF THIS PRODUCT IS HARMFUL TO YOUR HEALTH</span> 
                                 </div>                                 
                             </div>
-                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item"> <a href="home.html">INICIO</a> 
+                                    <li class="menu-item "> <a class="translatable" href="Ingles.html">HOME</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a href="page-about.htnml">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item current-menu-item"> <a class="translatable" href="about.html">ABOUT US</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-services.html">NUESTRAS MARCAS</a> 
+                                    <li class="menu-item"> <a class="translatable" href="brands.html">OUR BRANDS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-projects.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item"> <a class="translatable" href="responsibility.html">SOCIAL RESPONSIBILITY</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="page-contact.html">CONTACTO</a> 
+                                    <li class="menu-item"> <a class="translatable" href="contact.html">CONTACT</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
