--- a/casa2/about.html
+++ b/casa2/about.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%25252520Armando%25252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -90,14 +91,17 @@
                         <div id="site-content" class="site-content clearfix"> 
                             <div id="inner-content" class="inner-content-wrap"> 
                                 <div class="page-content"> 
-                                    <div class="newclass2">
-                                        <p>Mezcales Casa Armando represents the continuity of a dream of 5 generations, created with family values, a rich cultural heritage, and great love for Oaxaca and Mexico.</p>
-                                        <p>It is the leading mezcal company in Mexico, both in the domestic market and in Duty Free Mexico, with an increasing presence in Central America, Europe, Australia, and Asia. </p>
-                                        <div class="button">
-                                            <a href="#" class="themesflat-button bg-white">CONSISTENT QUALITY, SUSTAINABLE PRODUCTION</a>
-                                            <a href="#" class="themesflat-button bg-white">GREEN METHOD SUSTAINABILITY PROGRAM</a>
+                                    <!-- about.html -->                                     
+                                    <div id="contenedorPrincipal" class="newclass2">
+                                        <div class="button2">
+                                            <a onclick="cambiarContenido2('opcion3');" class="themesflat-button bg-white">CONSISTENT QUALITY, SUSTAINABLE PRODUCTION</a>
+                                            <a onclick="cambiarContenido2('opcion4');" class="themesflat-button bg-white">GREEN METHOD SUSTAINABILITY PROGRAM</a>
                                         </div>
-                                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
+                                        <div id="logo2" class="logn"></div>
+                                        <p id="titulo2" class="title"></p>
+                                        <p id="contenido2"> 
+                                            Mezcales Casa Armando represents the continuity of a dream of 5 generations, created with family values, a rich cultural heritage, and great love for Oaxaca and Mexico. <br><br>
+                                            It is the leading mezcal company in Mexico, both in the domestic market and in Duty Free Mexico, with an increasing presence in Central America, Europe, Australia, and Asia. <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;" alt="Imagen">  
                                     </div>
                                     <!-- SLIDER -->                                     
                                     <!-- END SLIDER -->                                     
