--- a/casa2/responsabilidad.html
+++ b/casa2/responsabilidad.html
@@ -12,6 +12,7 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
+        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
@@ -94,8 +95,8 @@
                                         <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;"> Estamos orgullosos de apoyar a la comunidad Oaxaqueña de distintas maneras:</p>
                                         <p>Con nuestra Fundación Agave y Nosotros que se enfoca en beneficiar y promover a artistas y artesanos locales. <br><br>Con la Fundación Don Antonio Rivera Venegas, que ofrece servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p> 
                                         <div class="button_agave">
-                                            <img href="#" class="imgfdarv" src="assets/img/Recurso2.png"></img>
-                                            <img href="#" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                            <img href="https://fundaciondonantonio.org.mx/" target="_blank" class="imgfdarv" src="assets/img/Recurso2.png"></img>
+                                            <img href="http://fundacionelagaveynosotros.com/" target="_blank" class="imgfdarv" src="assets/img/Recurso1.png"></img>
                                         </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
