--- a/_pgbackup/casa2/quien_1696440590.html
+++ b/_pgbackup/casa2/quien_1696440590.html
@@ -12,9 +12,8 @@
         <!-- Mobile Specific Metas -->         
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
-        <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
-        <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
+        <link href="../../../../Casa%25252520Armando%25252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <!-- Colors -->         
@@ -41,7 +40,8 @@
 </div>
                                 <!-- /.top-bar-content -->                                 
                                 <div class="top-bar-socials"> 
-                                    <div class="inner"> <span class="text">Languages:</span><span class="icons"><a href="index.html">SPA</a> <a class="current-menu-item" href="Ingles.html">ENG</a> </span> 
+                                    <div class="inner"> <span class="text">Idiomas:</span>
+                                        <span class="icons"><a>SPA</a> <a>ENG</a> </span> 
                                     </div>                                     
                                 </div>
                                 <!-- /.top-bar-socials -->                                 
@@ -63,15 +63,15 @@
                                 <!-- /.mobile-button -->                                 
                                 <nav id="main-nav" class="main-nav"> 
                                     <ul id="menu-primary-menu" class="menu"> 
-                                        <li class="menu-item menu-item-has-children "> <a class="translatable mayus" href="Ingles.html">Home</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children "> <a class="translatable mayus" href="about.html">About Us</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="brands.html">Our Brands</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a class="translatable mayus" href="responsibility.html">Social Responsibility</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a class="translatable mayus" href="contact.html">Contact</a> 
+                                        <li class="menu-item menu-item-has-children"> <a href="contacto.html">CONTACTO</a> 
                                         </li>                                         
                                     </ul>                                     
                                 </nav>
@@ -91,14 +91,17 @@
                         <div id="site-content" class="site-content clearfix"> 
                             <div id="inner-content" class="inner-content-wrap"> 
                                 <div class="page-content"> 
-                                    <div class="newclass5">
-                                        <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;">We are proud to support the Oaxacan community in various ways:</p>
-                                        <p>With our Agave and Us Foundation that focuses on benefiting and promoting local artists and artisans. <br><br>With the Don Antonio Rivera Venegas Foundation, which offers basic services such as medical attention; assistance in natural disasters; agronomy training; community dining hall, as well as the Municipal Boxing Training Center.</p> 
-                                        <div class="button_agave">
-                                            <img href="https://fundaciondonantonio.org.mx/" target="_blank" class="imgfdarv" src="assets/img/Recurso2.png"></img>
-                                            <img href="http://fundacionelagaveynosotros.com/" target="_blank" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                    <div id="contenedorPrincipal" class="newclass2">
+                                        <div class="button2">
+                                            <a onclick="cambiarContenido('opcion1');" class="themesflat-button bg-white">CALIDAD CONSISTENTE, PRODUCCIÓN SOSTENIBLE</a>
+                                            <a onclick="cambiarContenido('opcion2');" class="themesflat-button bg-white">PROGRAMA DE SUSTENTABILIDAD MÉTODO VERDE</a>
                                         </div>
-                                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
+                                        <div id="logo" class="logn"></div>
+                                        <p id="titulo" class="title"></p>
+                                        <p id="contenido"> 
+        Mezcales Casa Armando representa la continuidad de un sueño de 5 generaciones, creado con valores familiares, una rica herencia cultural y gran amor por Oaxaca y por México. <br><br>
+        Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, y Asia. </p> 
+                                        <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;" alt="Imagen"> 
                                     </div>
                                     <!-- SLIDER -->                                     
                                     <!-- END SLIDER -->                                     
@@ -136,22 +139,23 @@
                 <footer class="bottom" id="bottom" class="clearfix has-spacer"> 
                     <div id="bottom-bar-inner" class="container"> 
                         <div class="bottom-bar-inner-wrap"> 
-                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-content"> 
-                                <div id="copyright"><span class="translatable" class="text"><a href="#" class="translatable text-accent">©2020&nbsp;</a>AVOID EXCESS&nbsp;&nbsp;&nbsp;ABUSE OF THIS PRODUCT IS HARMFUL TO YOUR HEALTH</span> 
+                                <div id="copyright">
+                                    <span class="text"><a href="#" class="text-accent">©2020&nbsp;</a>EVITE EL EXCESO&nbsp;&nbsp;&nbsp;EL ABUSO EN EL CONSUMO DE ESTE PRODUCTO ES PERJUDICIAL PARA LA SALUD </span> 
                                 </div>                                 
                             </div>
+                            <!-- /.bottom-bar-content -->                             
                             <div class="bottom-bar-menu"> 
                                 <ul class="bottom-nav"> 
-                                    <li class="menu-item "> <a class="translatable" href="Ingles.html">HOME</a> 
+                                    <li class="menu-item"> <a href="index.html">INICIO</a> 
                                     </li>                                     
-                                    <li class="menu-item "> <a class="translatable" href="about.html">ABOUT US</a> 
+                                    <li class="menu-item current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a class="translatable" href="brands.html">OUR BRANDS</a> 
+                                    <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a class="translatable" href="responsibility.html">SOCIAL RESPONSIBILITY</a> 
+                                    <li class="menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a class="translatable" href="contact.html">CONTACT</a> 
+                                    <li class="menu-item"> <a href="contacto.html">CONTACTO</a> 
                                     </li>                                     
                                 </ul>                                 
                             </div>
