--- a/_pgbackup/casa2/responsabilidad_1696443912.html
+++ b/_pgbackup/casa2/responsabilidad_1696443912.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"> 
         <!-- Theme Style -->         
         <link href="../../../../Casa%2525252520Armando%2525252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
-        <link href="../../../../Casa%25252520Armando%25252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
+        <link href="../../../../Casa%252520Armando%252520Guillermo/Agave/MESCALESCA/css/theme.css" rel="stylesheet" type="text/css">
         <link href="../css/theme.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css"> 
         <!-- Colors -->         
@@ -64,11 +64,11 @@
                                     <ul id="menu-primary-menu" class="menu"> 
                                         <li class="menu-item menu-item-has-children"> <a href="index.html">INICIO</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
+                                        <li class="menu-item menu-item-has-children "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                         </li>                                         
                                         <li class="menu-item menu-item-has-children"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                         </li>                                         
-                                        <li class="menu-item menu-item-has-children"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                        <li class="menu-item menu-item-has-children current-menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                         </li>                                         
                                         <li class="menu-item menu-item-has-children"> <a href="contacto.html">CONTACTO</a> 
                                         </li>                                         
@@ -90,10 +90,13 @@
                         <div id="site-content" class="site-content clearfix"> 
                             <div id="inner-content" class="inner-content-wrap"> 
                                 <div class="page-content"> 
-                                    <div class="newclass2">
-                                        <p> Mezcales Casa Armando representa la continuidad de un sueño de 5 generaciones, creado con valores familiares, una rica herencia cultural y gran amor por Oaxaca y por México.</p>
-                                        <p>Es la compañía líder de mezcal en México, tanto en el mercado doméstico como en Duty Free México, con presencia cada vez mayor en Centroamérica, Europa, Australia, y Asia.<div class="button"><a href="#" class="themesflat-button bg-white">CALIDAD CONSISTENTE, PRODUCCIÓN SOSTENIBLE</a><a href="#" class="themesflat-button bg-white">PROGRAMA DE SUSTENTABILIDAD MÉTODO VERDE</a>
-                                            </div></p> 
+                                    <div class="newclass5">
+                                        <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;"> Estamos orgullosos de apoyar a la comunidad Oaxaqueña de distintas maneras:</p>
+                                        <p>Con nuestra Fundación Agave y Nosotros que se enfoca en beneficiar y promover a artistas y artesanos locales. <br><br>Con la Fundación Don Antonio Rivera Venegas, que ofrece servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p> 
+                                        <div class="button_agave">
+                                            <img href="#" class="imgfdarv" src="assets/img/Recurso2.png"></img>
+                                            <img href="#" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                        </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
                                     <!-- SLIDER -->                                     
@@ -141,11 +144,11 @@
                                 <ul class="bottom-nav"> 
                                     <li class="menu-item"> <a href="index.html">INICIO</a> 
                                     </li>                                     
-                                    <li class="menu-item current-menu-item"> <a href="quien.html">QUIÉNES SOMOS</a> 
+                                    <li class="menu-item "> <a href="quien.html">QUIÉNES SOMOS</a> 
                                     </li>                                     
                                     <li class="menu-item"> <a href="marcas.html">NUESTRAS MARCAS</a> 
                                     </li>                                     
-                                    <li class="menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
+                                    <li class="menu-item current-menu-item"> <a href="responsabilidad.html">RESPONSABILIDAD SOCIAL</a> 
                                     </li>                                     
                                     <li class="menu-item"> <a href="contacto.html">CONTACTO</a> 
                                     </li>                                     
