--- a/casa2/responsibility.html
+++ b/casa2/responsibility.html
@@ -94,9 +94,7 @@
                                     <div class="newclass5">
                                         <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;">We are proud to support the Oaxacan community in various ways:</p>
                                         <p>With our Agave and Us Foundation that focuses on benefiting and promoting local artists and artisans. <br><br>With the Don Antonio Rivera Venegas Foundation, which offers basic services such as medical attention; assistance in natural disasters; agronomy training; community dining hall, as well as the Municipal Boxing Training Center.</p> 
-                                        <div class="button_agave">
-                                            <img href="https://fundaciondonantonio.org.mx/" target="_blank" class="imgfdarv" src="assets/img/Recurso2.png"></img>
-                                            <img href="http://fundacionelagaveynosotros.com/" target="_blank" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                        <div class="button_agave"><a class="imgfdarv" href="https://fundaciondonantonio.org.mx/" target="_blank"> <img src="assets/img/Recurso2.png" alt="Description for Image"> </a><a class="imgfdarv" href="http://fundacionelagaveynosotros.com/" target="_blank"> <img src="assets/img/Recurso1.png" alt="Description for Image"> </a>
                                         </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
