--- a/casa2/responsabilidad.html
+++ b/casa2/responsabilidad.html
@@ -94,9 +94,7 @@
                                     <div class="newclass5">
                                         <p style="font-weight: 700; font-size: 37px; line-height: 46px; font-style: italic; color: #424040;"> Estamos orgullosos de apoyar a la comunidad Oaxaqueña de distintas maneras:</p>
                                         <p>Con nuestra Fundación Agave y Nosotros que se enfoca en beneficiar y promover a artistas y artesanos locales. <br><br>Con la Fundación Don Antonio Rivera Venegas, que ofrece servicios básicos tales como atención médica; ayuda ante desastres naturales; capacitación sobre agronomía; comedor comunitario, así como el Centro de Formación Boxístico Municipal.</p> 
-                                        <div class="button_agave">
-                                            <img href="https://fundaciondonantonio.org.mx/" target="_blank" class="imgfdarv" src="assets/img/Recurso2.png"></img>
-                                            <img href="http://fundacionelagaveynosotros.com/" target="_blank" class="imgfdarv" src="assets/img/Recurso1.png"></img>
+                                        <div class="button_agave"><a class="imgfdarv" href="https://fundaciondonantonio.org.mx/" target="_blank"> <img src="assets/img/Recurso2.png" alt="Description for Image"> </a><a class="imgfdarv" href="http://fundacionelagaveynosotros.com/" target="_blank"> <img src="assets/img/Recurso1.png" alt="Description for Image"> </a>
                                         </div>
                                         <img src="assets/img/simbolo.png" class="block2" style="margin-top: 82px;"></img> 
                                     </div>
